--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,6 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_svg: ^2.0.10+1
   fpdart: ^1.1.0
   intl: ^0.19.0
   url_launcher: ^6.2.2
